# qtmusicxml

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicrenderer.cpp  musicrenderer.h  numberselector.cpp  numberselector.h  overlaywidget.cpp  overlaywidget.h  verseselector.cpp  verseselector.h
include/: libhymn_renderer.h
lib/: .gitkeep
